avance, colores personalizados no funcionan por alguna razon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold">hello world</h1>
+    <p class="">hello world</p>
+    <div class="w-64 h-64 bg-secondary"></div>
   </body>
 </html>
