error solucionado, toca cada ves de un cambio hacer npm run build para que se actualize

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" class="css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=kalam&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <p class="">hello world</p>
+    <p class="font-mono">hello world</p>
+    <p class="font-Montserrat">hello world</p>
+    <p class="font-kalam">hello world</p>
+    <p class="font-kalam">hello world</p>
+    <div class="w-64 h-64 bg-black"></div>
     <div class="w-64 h-64 bg-secondary"></div>
+    <div class="w-64 h-64 bg-sanFrancisco"></div>
   </body>
 </html>
