--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,78 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=kalam&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
+    <title>Platzi Travel</title>
   </head>
   <body>
-    <p class="font-mono">hello world</p>
-    <p class="font-Montserrat">hello world</p>
-    <p class="font-kalam">hello world</p>
-    <p class="font-kalam">hello world</p>
-    <div class="w-64 h-64 bg-black"></div>
-    <div class="w-64 h-64 bg-secondary"></div>
-    <div class="w-64 h-64 bg-sanFrancisco"></div>
+    <nav></nav>
+    <div id="tab_bar"></div>
+    <section class="w-full h-screen">
+      <div id="home">
+        <div class="w-full h-3/4">
+          <div
+            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center"
+          >
+            <input
+              class="outline-none p-3 rounded-full shadow-sm"
+              placeholder="san Francisco"
+              type="search"
+              name=""
+              id=""
+            />
+            <button
+              class="w-36 rounded-full text-xl text-primary shadow-sm bg-white font-semibold p-4"
+            >
+              explorar
+            </button>
+          </div>
+          <div class="w-full h-full">
+            <img src="./img/sanFrancisco.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="p-20 flex overflow-x-scroll" id="recomendadas">
+        <div
+          class="w-48 h-64 shadow-md rounded-lg mx-8"
+          id="recomendation-card"
+        >
+          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
+            <p class="text-white text-bold text-xl">Norway</p>
+            <p class="text-white text-md">Beatiful landscape</p>
+          </div>
+        </div>
+        <div
+          class="w-48 h-64 shadow-md rounded-lg mx-8"
+          id="recomendation-card"
+        >
+          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
+            <p class="text-white text-bold text-xl">Norway</p>
+            <p class="text-white text-md">Beatiful landscape</p>
+          </div>
+        </div>
+        <div
+          class="w-48 h-64 shadow-md rounded-lg mx-8"
+          id="recomendation-card"
+        >
+          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
+            <p class="text-white text-bold text-xl">Norway</p>
+            <p class="text-white text-md">Beatiful landscape</p>
+          </div>
+        </div>
+        <div
+          class="w-48 h-64 shadow-md rounded-lg mx-8"
+          id="recomendation-card"
+        >
+          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
+            <p class="text-white text-bold text-xl">Norway</p>
+            <p class="text-white text-md">Beatiful landscape</p>
+          </div>
+        </div>
+      </div>
+      <div id="rentas_destacadas"></div>
+    </section>
   </body>
 </html>
