nuevos conceptos ententidos y aplicados

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav></nav>
     <div id="tab_bar"></div>
-    <section class="w-full h-screen">
+    <section class="w-full h-screen ">
       <div id="home">
         <div class="w-full h-3/4">
           <div
@@ -40,45 +40,35 @@
           </div>
         </div>
       </div>
-      <div class="p-20 flex overflow-x-scroll" id="recomendadas">
-        <div
-          class="w-48 h-64 shadow-md rounded-lg mx-8"
-          id="recomendation-card"
-        >
-          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
-            <p class="text-white text-bold text-xl">Norway</p>
-            <p class="text-white text-md">Beatiful landscape</p>
+      <p class="text-3xl font-semibold text-primary px-10 py-10">Recomendados</p>
+      <div class="recomendation-sect" id="recomendation">
+          <div class="Card" id="recomendation-card">
+            <div class="image-cover bg-norway"></div>
+            <div class="description-cover bg-secondary">
+              <p class="text-white text-bold text-xl">Norway</p>
+              <p class="text-white text-md">Beatiful landscape</p>
+            </div>
           </div>
-        </div>
-        <div
-          class="w-48 h-64 shadow-md rounded-lg mx-8"
-          id="recomendation-card"
-        >
-          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
-            <p class="text-white text-bold text-xl">Norway</p>
-            <p class="text-white text-md">Beatiful landscape</p>
+          <div class="Card" id="recomendation-card">
+            <div class="image-cover bg-newYork"></div>
+            <div class="description-cover bg-white">
+              <p class="text-gray-800 text-bold text-xl">New York</p>
+              <p class="text-gray-800 text-md">Concrete Jungle</p>
+            </div>
           </div>
-        </div>
-        <div
-          class="w-48 h-64 shadow-md rounded-lg mx-8"
-          id="recomendation-card"
-        >
-          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
-            <p class="text-white text-bold text-xl">Norway</p>
-            <p class="text-white text-md">Beatiful landscape</p>
+          <div class="Card" id="recomendation-card">
+            <div class="image-cover bg-seattle"></div>
+            <div class="description-cover bg-secondary">
+              <p class="text-white text-bold text-xl">Seattle</p>
+              <p class="text-white text-md">Big City</p>
+            </div>
           </div>
-        </div>
-        <div
-          class="w-48 h-64 shadow-md rounded-lg mx-8"
-          id="recomendation-card"
-        >
-          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-          <div class="w-full h-2/5 bg-secondary rounded-b-lg px-4 py-2">
-            <p class="text-white text-bold text-xl">Norway</p>
-            <p class="text-white text-md">Beatiful landscape</p>
+          <div class="Card" id="recomendation-card">
+            <div class="image-cover bg-switzerland"></div>
+            <div class="description-cover bg-white">
+              <p class="text-gray-800 text-bold text-xl">switzerland</p>
+              <p class="text-gray-800 text-md">Concrete Jungle</p>
+            </div>
           </div>
         </div>
       </div>
