avance notable del curso, ya por terminar

--- a/public/index.html
+++ b/public/index.html
@@ -13,30 +13,29 @@
     />
     <title>Platzi Travel</title>
   </head>
-  <body>
+  <body class="font-Montserrat">
     <nav></nav>
-    <div id="tab_bar"></div>
-    <section class="w-full h-screen ">
+    <section class="w-full h-auto ">
       <div id="home">
         <div class="w-full h-3/4">
-          <div
-            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center"
-          >
+          <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center lg:space-y-0 lg:items-start lg:pt-36 lg:justify-start ">
             <input
-              class="outline-none p-3 rounded-full shadow-sm"
+              class="outline-none p-3 rounded-full shadow-sm transition duration-300 focus-whithin:shadow-sm focus:ring-2 focus:w-11/12 lg:hidden"
               placeholder="san Francisco"
               type="search"
               name=""
               id=""
             />
-            <button
-              class="w-36 rounded-full text-xl text-primary shadow-sm bg-white font-semibold p-4"
-            >
+            <div class="hidden h-auto lg:w-2/5 lg:flex pb-6">
+              <p class="text-3xl ml-16 font-bold ">encuentra ubicaciones como esta</p>
+            </div>
+            <button class="w-44 rounded-full text-xl text-primary shadow-sm bg-white font-semibold p-4  transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:translate-y-1 hover:scale-110 lg:ml-16 ">
               explorar
             </button>
           </div>
-          <div class="w-full h-full">
-            <img src="./img/sanFrancisco.jpg" alt="" />
+          <div class="w-full h-full lg:h-96 lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center">
+
+            <img class="lg:hidden  " src="./img/sanFrancisco.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -70,9 +69,78 @@
               <p class="text-gray-800 text-md">Concrete Jungle</p>
             </div>
           </div>
+      </div>
+      </div>
+      <p class="text-3xl font-semibold text-primary px-10 py-10">Rentas Destacadas</p>
+      <div id="rentas_destacadas" class="px-6 h-fit w-full">
+        <div class="w-full h-fit flex flex-col space-y-4 items-center justify-center">
+          <div class="w-full h-96 bg-chicago bg-cover rounded-lg py-10 px-5 lg:h-[38rem] lg:text-right lg:bg-center lg:pt-12">
+            <p class="title ">chicago</p>
+            <p>2 habitaciones, baño y cocina</p>
+          </div>
+          <div class="w-full h-full grid grid-cols-1 lg:grid-cols-5 lg:grid-rows-2 lg:place-items-center lg:place-content-stretch gap-4">
+
+            <div class="w-full h-full bg-switzerland text-white bg-cover rounded-lg py-10 px-5 lg:row-span-2 lg:col-span-2 lg:h-[49rem] lg:text-right lg:bg-center lg:pt-12">
+              <p class="title ">Suecia</p>
+              <p>2 habitaciones, baño y cocina</p>
+            </div>
+            <div class="w-full h-96 bg-miami text-white bg-cover rounded-lg py-10 px-5 lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12">
+              <p class="title ">Miami</p>
+              <p>2 habitaciones, baño y cocina</p>
+            </div>
+            <div class="w-full h-96 bg-bali text-white bg-cover rounded-lg py-10 px-5 lg:row-span-1 lg:col-span-3 lg:text-right lg:bg-center lg:pt-12">
+              <p class="title ">Bali</p>
+              <p>2 habitaciones, baño y cocina</p>
+            </div>
+          </div>
         </div>
       </div>
-      <div id="rentas_destacadas"></div>
+      <div id="faqs" class="w-full h-fit">
+        <div class="w-full h-fit  px-6 flex flex-col space-y-4">
+          <p class="text-3xl text-primary font-extrabold py-7 mt-6">FAQS</p>
+          <div>
+            <p class="text-3xl font-medium text-primary">Metodos de pago</p>
+            <p class="pt-2 pb-6">We accept VISA, MasterCard, American Express, Paypal and Binance, We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+            <p class="text-3xl font-medium text-primary">Metodos de cancelacion</p>
+            <p class="pt-2 pb-6">We accept VISA, MasterCard, American Express, Paypal and Binance, We accept VISA, MasterCard, American Express, Paypal and Binance.</p>
+          </div>
+        </div>
+      </div>
+      <footer class="w-full h-full bg-gray-50 p-6 space-y-2">
+        <p class="text-lg">Acerca de</p>
+        <p class="text-sm text-gray-300">Acerca de</p>
+        <p class="text-sm text-gray-300">Invesionistas</p>
+        <p class="text-sm text-gray-300">Empleos</p>
+        <p class="text-sm text-gray-300">Terminos y condiciones</p>
+        <p class="text-sm text-gray-300">Platzi Travel, Inc.</p>
+      </footer>
     </section>
+    <div class="w-full h-fit bg-white flex justify-center fixed left-0 bottom-0 shadow-md lg:hidden" id="tab_bar">
+      <a href="#recomendation" class="p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+          <path class="fill-current text-gray-200" fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd" />
+        </svg>
+      </a>
+      <a href="#home" class="p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+          <path class="fill-current text-gray-200" fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+        </svg>
+      </a>
+      <a href="#home" class="p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+          <path class="fill-current text-gray-200" d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+        </svg>
+      </a>
+      <button class="p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+          <path class="fill-current text-primary" d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+        </svg>
+      </button>
+      <a href="#" class="p-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20" fill="currentColor">
+          <path class="fill-current text-gray-200" fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
+        </svg>
+      </a>
+    </div>
   </body>
 </html>
