--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
         </svg>
       </a>
     </div>
-    <script src="js/modoNocturno.js"></script>
+    <script src="../tailwind-css/js/modoNocturno.js"></script>
   </body>
 </html>
